syntax = "proto3";
package gochat;

message TextMessage {	
	string message_uid = 1;
	int32 sender_id = 2;
	string sender_addr = 3;
	int64 timestamp = 4;
	string text = 5;
}